# salma

./: .gitignore  CMakeLists.txt  README.md  state.md
app/camera-calibration-tool/: CMakeLists.txt  MainWindow.cpp  main.cpp
app/recording-tool/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Output.h  RecordingThread.cpp  VideoWidget.h  main.cpp
program/src/calibration/: CMakeLists.txt  CameraCalibrationData.cpp  CameraCalibrationData.h  Serialization.cpp  Serialization.h  StereoRigCalibrationData.cpp  StereoRigCalibrationData.h  TwoViewGeometry.cpp  TwoViewGeometry.h
program/src/slam/: CMakeLists.txt  Debug.cpp  Debug.h  FinitePriorityQueue.h  Misc.cpp  Misc.h  SLAMConfig.cpp  SLAMDataStructures.h  SLAMModule.cpp  SLAMModule.h  SLAMModuleAlignment.cpp  SLAMModuleAlignment.h  SLAMModuleDenseReconstruction.cpp  SLAMModuleDenseReconstruction.h  SLAMModuleFeatures.cpp  SLAMModuleFeatures.h  SLAMModuleOpticalFlow.cpp  SLAMModuleOpticalFlow.h  SLAMModulePyramid.cpp  SLAMModulePyramid.h  SLAMModuleStereoMatcher.cpp  SLAMModuleStereoMatcher.h  SLAMModuleTemporalMatcher.cpp  SLAMModuleTemporalMatcher.h  SLAMModuleTriReg.cpp  SLAMModuleTriReg.h  SLAMModuleTriangulation.cpp  SLAMModuleTriangulation.h  SLAMParameters.h  SLAMProject.cpp  SLAMProject.h  SLAMPyramid.h  SLAMSystem.cpp  SLAMSystem.h  StereoMatcher.cpp  StereoMatcher.h  slam.cpp
program/src/slamcore/: CMakeLists.txt  SLAMDataStructures.h  SLAMProject.cpp  SLAMProject.h  SLAMReconstructionDB.cpp  SLAMReconstructionDB.h
program/src/ui/: CMakeLists.txt  CameraCalibrationOperation.cpp  CameraCalibrationOperation.h  CameraCalibrationParametersWidget.cpp  CameraCalibrationParametersWidget.h  CameraList.cpp  CameraList.h  MainWindow.cpp  MonoRecordingOperation.cpp  MonoRecordingOperation.h  MonoRecordingParametersWidget.cpp  MonoRecordingParametersWidget.h  Operation.h  OperationThread.cpp  PathWidget.cpp  StatsWidget.cpp  StereoRecordingOperation.cpp  StereoRecordingOperation.h  StereoRecordingParametersWidget.cpp  StereoRecordingParametersWidget.h  StereoRigCalibrationOperation.cpp  StereoRigCalibrationOperation.h  StereoRigCalibrationParametersWidget.cpp  StereoRigCalibrationParametersWidget.h  TargetParametersDialog.cpp  TargetParametersDialog.h  TargetParametersWidget.cpp  TargetParametersWidget.h  TriggerDialog.cpp  TriggerDialog.h  TriggerInfo.cpp  TriggerWidget.cpp  VideoInputDialog.cpp  VideoInputDialog.h  VideoWidget.cpp
program/src/uicommon/: CMakeLists.txt  PathWidget.cpp  Port.h
program/src/uivisualization/: CMakeLists.txt  ExportPointCloudDialog.cpp  ExportPointCloudDialog.h  InspectorWidget.cpp  InspectorWidget.h  MainWindow.cpp  MainWindow.h  OpenDialog.cpp  OpenDialog.h  OpenReconstructionDialog.cpp  OpenReconstructionDialog.h  ViewerWidget.cpp  ViewerWidget.h  ViewerWidgetBase.cpp  VisualizationData.h  VisualizationSettings.h  VisualizationSettingsDialog.cpp  VisualizationSettingsDialog.h
program/src/video/: AggregatedVideoSource.h  ArduinoTrigger.cpp  ArduinoTrigger.h  AssembledVideoSource.cpp  AvtCamera.cpp  AvtCamera.h  AvtRig.cpp  AvtRig.h  AvtStereoCamera.cpp  AvtStereoCamera.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraRig.cpp  ExternalTrigger.cpp  ExternalTrigger.h  GenICamCamera.cpp  GenICamCamera.h  GenICamRig.cpp  GenICamRig.h  GeneralVideoSource.cpp  GeneralVideoSource.h  Image.cpp  Image.h  MockCamera.cpp  MockCamera.h  Trigger.cpp  Trigger.h  VideoErrorCode.h  VideoReader.cpp  VideoReader.h  VideoSource.cpp  VideoSource.h  VideoSystem.cpp  VideoSystem.h  VideoSystemImpl.cpp  VideoSystemImpl.h  VimbaCamera.cpp
software/: CMakeLists.txt
software/app/: CMakeLists.txt
software/app/detecttarget/: CMakeLists.txt  main.cpp
software/app/newui/: CMakeLists.txt  main.cpp
software/app/reconstruction/: main.cpp
software/app/salma/: CMakeLists.txt  main.cpp
software/app/visualization/: main.cpp
software/cmake/: FindAravis.cmake  FindFFmpeg.cmake  FindOSG.cmake  FindTurboJPEG.cmake  FindVimba.cmake  FindlibLBFGS.cmake
software/src/: CMakeLists.txt
software/src/buildinfo/: BuildInfo.cpp  BuildInfo.h  CMakeLists.txt
software/src/calibration/: CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  CameraCalibrationData.cpp  (+7 more)
software/tst/: CMakeLists.txt
src/calibration/: CMakeLists.txt  CameraCalibrationData.cpp  StereoRigCalibrationData.h
src/camera/: CMakeLists.txt  Camera.cpp  Camera.h  Image.h  OpenCVCamera.cpp  OpenCVCamera.h  PseudoCamera.cpp  PseudoCamera.h  StereoImage.cpp  StereoImage.h  StereoRig.cpp  StereoRig.h  VimbaCamera.cpp  VimbaCamera.h
src/common/: BuildInfo.cpp  BuildInfo.h  CMakeLists.txt  CalibrationData.cpp  CalibrationData.h
src/slam/: CMakeLists.txt  CommonDataStructures.h  DefaultSLAMEngine.cpp  DefaultSLAMEngine.h  FinitePriorityQueue.h  SLAMEngine.cpp  SLAMEngine.h  SLAMEngineImpl.cpp  SLAMEngineImpl.h  SLAMOutput.cpp  SLAMOutput.h  SLAMParameters.cpp  SLAMParameters.h  SLAMPrimitives.cpp  SLAMPrimitives.h  SLAMThread.cpp
src/ui/: AboutDialog.cpp  CMakeLists.txt  CameraCalibration.h  CameraCalibrationMainWindow.cpp  CameraCalibrationMainWindow.h  CameraCalibrationOperation.cpp  CameraCalibrationOperation.h  CameraCalibrationParameters.h  CameraCalibrationParametersDialog.cpp  CameraCalibrationParametersDialog.h  CameraCalibrationParametersWidget.cpp  CameraCalibrationParametersWidget.h  CameraCalibrationStatsWidget.cpp  CameraCalibrationStatsWidget.h  CameraCalibrationThread.cpp  CameraCalibrationThread.h  MainWindow.cpp  MainWindow.h  MonoRecordingOperation.cpp  MonoRecordingOperation.h  MonoRecordingParametersWidget.cpp  MonoRecordingParametersWidget.h  Operation.cpp  Operation.h  OperationDialog.cpp  OperationDialog.h  OperationParametersWidget.h  OperationThread.cpp  OperationThread.h  ParametersDialog.cpp  ParametersDialog.h  RecordingInformationWidget.cpp  RecordingInformationWidget.h  RecordingMainWindow.cpp  RecordingMainWindow.h  RecordingOutput.h  RecordingParameters.h  RecordingParametersDialog.cpp  RecordingParametersDialog.h  RecordingStatsWidget.cpp  (+22 more)
src/video/: CMakeLists.txt  Image.h  StereoRig.cpp  VideoSystem.h
(+544 files in other folders)
