add_subdirectory(buildinfo)
add_subdirectory(calibration)
add_subdirectory(mvpnp)
add_subdirectory(slam)
add_subdirectory(stereomatcher)
add_subdirectory(target)
add_subdirectory(uicommon)
#add_subdirectory(uiacquisition)
#add_subdirectory(uivisualization)
add_subdirectory(ui)
add_subdirectory(video)

