add_subdirectory(buildinfo)
add_subdirectory(calibration)
add_subdirectory(mvpnp)
add_subdirectory(slam)
if(${SALMA_WITH_CUDA})
    add_subdirectory(stereomatcher)
endif()
add_subdirectory(target)
add_subdirectory(uicommon)
add_subdirectory(uirecording)
add_subdirectory(uicalibration)
add_subdirectory(uireconstruction)
add_subdirectory(ui)
add_subdirectory(video)
add_subdirectory(persistence)

