
add_library(
    salma_buildinfo
    SHARED
    BuildInfo.h
    BuildInfo.cpp
)

target_include_directories(salma_buildinfo INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

target_compile_definitions(
    salma_buildinfo
    PRIVATE
    SALMA_VERSION_MAJOR=${SALMA_VERSION_MAJOR}
    SALMA_VERSION_MINOR=${SALMA_VERSION_MINOR}
    SALMA_VERSION_REVISION=${SALMA_VERSION_REVISION}
    #SALMA_BUILD_TYPE="$<CONFIG>"
    SALMA_BUILD_TYPE="${CMAKE_BUILD_TYPE}"
    SALMA_CXX_COMPILER_ID="$<CXX_COMPILER_ID>"
    SALMA_CXX_COMPILER_VERSION="$<CXX_COMPILER_VERSION>"
)

install(TARGETS salma_buildinfo LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})

